create the Admin api documnetation using swwager
