# storage/api-docs/api-docs.json
@@ -13,6 +13,262 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/create/category": {
+            "post": {
+                "tags": [
+                    "Admin API'S"
+                ],
+                "summary": "Create a new category",
+                "description": "Create a new category with the provided name.",
+                "operationId": "createCategory",
+                "requestBody": {
+                    "description": "Category data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Fantasy"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Category created successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Unique identifier for the category",
+                                            "type": "integer",
+                                            "format": "int64",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "description": "Name of the category",
+                                            "type": "string",
+                                            "example": "Fantasy"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error. Invalid input data provided."
+                    }
+                }
+            }
+        },
+        "/api/create/sub/category": {
+            "post": {
+                "tags": [
+                    "Admin API'S"
+                ],
+                "summary": "Create a new subcategory",
+                "description": "Create a new subcategory with the provided name and category ID.",
+                "operationId": "createSubcategory",
+                "requestBody": {
+                    "description": "Subcategory data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "category_id"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Science Fiction"
+                                    },
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Subcategory created successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Unique identifier for the subcategory",
+                                            "type": "integer",
+                                            "format": "int64",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "description": "Name of the subcategory",
+                                            "type": "string",
+                                            "example": "Science Fiction"
+                                        },
+                                        "category_id": {
+                                            "description": "ID of the parent category",
+                                            "type": "integer",
+                                            "example": 1
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error. Invalid input data provided."
+                    }
+                }
+            }
+        },
+        "/api/create/book": {
+            "post": {
+                "tags": [
+                    "Admin API'S"
+                ],
+                "summary": "Create a new book",
+                "description": "Create a new book with the provided details.",
+                "operationId": "storeBook",
+                "requestBody": {
+                    "description": "Book data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "category_name",
+                                    "subcategory_name",
+                                    "author_name",
+                                    "publicationDate",
+                                    "src",
+                                    "briefDescription"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "The Hobbit"
+                                    },
+                                    "category_name": {
+                                        "type": "string",
+                                        "example": "Fantasy"
+                                    },
+                                    "subcategory_name": {
+                                        "type": "string",
+                                        "example": "Adventure"
+                                    },
+                                    "author_name": {
+                                        "type": "string",
+                                        "example": "J.R.R. Tolkien"
+                                    },
+                                    "biography": {
+                                        "type": "string",
+                                        "example": "John Ronald Reuel Tolkien was an English writer, poet, philologist, and academic."
+                                    },
+                                    "publicationDate": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "1937-09-21"
+                                    },
+                                    "src": {
+                                        "type": "string",
+                                        "example": "https://example.com/the-hobbit.jpg"
+                                    },
+                                    "briefDescription": {
+                                        "type": "string",
+                                        "example": "The Hobbit is a fantasy novel by J.R.R. Tolkien."
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Book created successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Unique identifier for the book",
+                                            "type": "integer",
+                                            "format": "int64",
+                                            "example": 1
+                                        },
+                                        "title": {
+                                            "description": "Title of the book",
+                                            "type": "string",
+                                            "example": "The Hobbit"
+                                        },
+                                        "favorite": {
+                                            "description": "Indicates whether the book is a favorite",
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "publicationDate": {
+                                            "description": "Publishing date of the book",
+                                            "type": "string",
+                                            "format": "date",
+                                            "example": "1937-09-21"
+                                        },
+                                        "src": {
+                                            "description": "Source URL of the book",
+                                            "type": "string",
+                                            "example": "https://example.com/the-hobbit.jpg"
+                                        },
+                                        "briefDescription": {
+                                            "description": "Brief description of the book",
+                                            "type": "string",
+                                            "example": "The Hobbit is a fantasy novel by J.R.R. Tolkien."
+                                        },
+                                        "category_id": {
+                                            "description": "ID of the category associated with the book",
+                                            "type": "integer"
+                                        },
+                                        "sub_category_id": {
+                                            "description": "ID of the subcategory associated with the book",
+                                            "type": "integer"
+                                        },
+                                        "author_id": {
+                                            "description": "ID of the author associated with the book",
+                                            "type": "integer"
+                                        },
+                                        "rate_id": {
+                                            "description": "ID of the rate associated with the book",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error. Invalid input data provided."
+                    }
+                }
+            }
+        },
         "/api/all/books": {
             "get": {
                 "tags": [
